fix: Fixed indefinite progress loader flickering on Chrome/Android

--- a/src/drive/mobile/ducks/mediaBackup/styles.styl
+++ b/src/drive/mobile/ducks/mediaBackup/styles.styl
@@ -52,6 +52,7 @@
     left 0
     background dodgerBlue
     animation squashstretch 1s linear infinite alternate
+    backface-visibility hidden
 
 .infinite-progress--global
     margin-top 0
